<resources>
    <string name="app_name">PokemonBattleAnalyzer</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_save_as_my">Save as My Party</string>
    <string name="navigation_edit_my_party">Edit My Party</string>
    <string name="navigation_clear">Clear</string>
    <string name="navigation_show_kp">Show KP</string>
    <string name="navigation_graph">Graph</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="mine">自分</string>
    <string name="opponent">相手</string>
    <string name="skill">Skill</string>
    <string name="item">Item</string>
    <string name="characteristic">Characteristic</string>
    <string name="ability">Ability</string>
    <string name="hp">HP</string>


    <string name="affinity_fragment_button">Back</string>
    <string name="affinity_fragment_column1title">選択したポケモン</string>
    <string name="affinity_fragment_column2title">補完対象</string>
    <string name="affinity_fragment_quadruple">4倍</string>
    <string name="affinity_fragment_double">2倍</string>
    <string name="affinity_fragment_half">1/2倍</string>
    <string name="affinity_fragment_quarter">1/4倍</string>
    <string name="affinity_fragment_zero">効果なし</string>
    <string name="affinity_fragment_exception">特性込み</string>
    <string name="affinity_fragment_deviation">偏差値</string>
    <string name="affinity_fragment_pokemon">ポケモン</string>

    <string name="action_modify">Modify</string>
    <string name="title_activity_detail2">DetailActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_edit">EditActivity</string>


    <string name="edit_activity_item">持物</string>
    <string name="edit_activity_char">性格</string>
    <string name="edit_activity_abi">特性</string>
    <string name="edit_activity_skill1">技1</string>
    <string name="edit_activity_skill2">技2</string>
    <string name="edit_activity_skill3">技3</string>
    <string name="edit_activity_skill4">技4</string>
    <string name="edit_activity_h">H</string>
    <string name="edit_activity_a">A</string>
    <string name="edit_activity_b">B</string>
    <string name="edit_activity_c">C</string>
    <string name="edit_activity_d">D</string>
    <string name="edit_activity_s">S</string>

    <string name="expected_activity_vs">VS</string>
    <string name="expected_activity_beat_number">確定数</string>
    <string name="expected_activity_dead">倒される</string>
    <string name="expected_activity_covering">網羅率</string>
    <string name="expected_activity_order">すばやさ実数値</string>
    <string name="expected_activity_priority">先制技</string>
    <string name="expected_activity_order_ability">特性</string>
    <string name="expected_activity_correction_rate">性格</string>
    <string name="expected_activity_scarf_rate">スカーフ</string>

    <string name="expected_activity_weather_sunny">晴</string>
    <string name="expected_activity_weather_rainy">雨</string>
    <string name="expected_activity_weather_sandstorm">砂嵐</string>
    <string name="expected_activity_weather_hailstone">霰</string>

    <string name="expected_activity_room_trick">トリック</string>
    <string name="expected_activity_room_magic">マジック</string>
    <string name="expected_activity_room_wander">ワンダー</string>

    <string name="expected_activity_terrain_electric">エレキ</string>
    <string name="expected_activity_terrain_grass">グラス</string>
    <string name="expected_activity_terrain_misty">ミスト</string>

    <string name="expected_activity_field_lightScreen">光壁</string>
    <string name="expected_activity_field_reflect">物壁</string>
    <string name="expected_activity_field_tailwind">追風</string>
    <string name="expected_activity_field_stealthRock">隠岩</string>
    <string name="expected_activity_field_safeGuard">神秘</string>
    <string name="expected_activity_field_gravity">重力</string>
    <string name="expected_activity_field_matBlock">畳返</string>
    <string name="expected_activity_field_spike">撒菱</string>
    <string name="expected_activity_field_toxicSpike">毒菱</string>
    <string name="expected_activity_field_stickyWeb">蜘巣</string>
    <string name="expected_activity_field_mud">泥遊</string>
    <string name="expected_activity_field_water">水遊</string>
    <string name="expected_activity_field_luckyChant">急所</string>
    <string name="expected_activity_field_mist">白霧</string>

    <string name="title_activity_login">Sign in</string>

    <string name="detail_activity_base">Base Status</string>
    <string name="detail_activity_hp">残HP</string>
    <string name="detail_activity_mega">メガ</string>
    <string name="detail_activity_migawari">身代</string>
    <string name="detail_activity_aliminent">状態異常</string>

    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


</resources>
