<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_save"
            android:icon="@drawable/nav_save_48"
            android:title="@string/navigation_save_as_my" />
        <item
            android:id="@+id/nav_edit"
            android:icon="@drawable/nav_edit_48"
            android:title="@string/navigation_edit_my_party" />
        <item
            android:id="@+id/nav_clear"
            android:icon="@drawable/nav_refresh_48"
            android:title="@string/navigation_edit_my_party" />
        <item
            android:id="@+id/nav_graph"
            android:icon="@drawable/nav_refresh_48"
            android:title="@string/navigation_graph" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
