<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/base_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gmail.sacchin13.pokemonbattleanalyzer.activity.ExpectedActivity">

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="@color/colorPrimaryDark"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorTextIcons"
                    android:scaleType="centerCrop"
                    android:transitionName="image"
                    app:layout_collapseMode="parallax" />

                <android.support.v7.widget.Toolbar
                    android:id="@+id/tool_bar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin" />
            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/nested_scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TableLayout
                    android:id="@+id/inputTable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:stretchColumns="0,1,2,3,4,5,6">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/detail_activity_mega" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/detail_activity_hp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/detail_activity_aliminent" />

                    </TableRow>

                    <TableRow
                        android:id="@+id/my_header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <Spinner
                            android:id="@+id/my_mega_check"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <EditText
                            android:id="@+id/myHPBar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_span="2"
                            android:hint="@string/hp"
                            android:imeOptions="actionSend"
                            android:inputType="number" />

                        <Spinner
                            android:id="@+id/myStatusSpinner"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_span="3" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/oppo_header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <Spinner
                            android:id="@+id/oppo_mega_check"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <SeekBar
                            android:id="@+id/opponentHPBar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_span="2"
                            android:max="100"
                            android:progress="100" />

                        <Spinner
                            android:id="@+id/opponentStatusSpinner"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_span="3" />

                        <RadioButton android:id="@+id/oppoMigawariRadio" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/edit_activity_a" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/edit_activity_b" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/edit_activity_c" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/edit_activity_d" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/edit_activity_s" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <Spinner
                            android:id="@+id/myASpinner"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <Spinner
                            android:id="@+id/myBSpinner"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <Spinner
                            android:id="@+id/myCSpinner"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <Spinner
                            android:id="@+id/myDSpinner"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <Spinner
                            android:id="@+id/mySSpinner"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </TableRow>
                </TableLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:text="@string/detail_activity_base" />

                <LinearLayout
                    android:id="@+id/statusview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    android:paddingStart="@dimen/activity_horizontal_margin" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:text="@string/skill" />

                <TableLayout
                    android:id="@+id/skilltable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:stretchColumns="0,1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:text="@string/characteristic" />

                <TableLayout
                    android:id="@+id/characteristictable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:stretchColumns="0,1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:text="@string/item" />

                <TableLayout
                    android:id="@+id/itemtable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:stretchColumns="0,1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:text="@string/ability" />

                <TableLayout
                    android:id="@+id/abilitytable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:stretchColumns="0,1" />


            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/detail_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:src="@drawable/monsterball"
            app:backgroundTint="@color/colorAccent"
            app:layout_anchor="@+id/app_bar"
            app:layout_anchorGravity="bottom|right|end" />

    </android.support.design.widget.CoordinatorLayout>

</RelativeLayout>
